--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -37,7 +37,7 @@ $gutter: $grid-gutter-width
 @include font('raleway-vh', normal, 500, '../fonts/ralewaymedium-webfont.woff2')
 @include font('raleway-vh', normal, 400, '../fonts/ralewayregular-webfont.woff2')
 @include font('raleway-vh', normal, 600, '../fonts/ralewaysemibold-webfont.woff2')
-@include font('raleway-vh', normal, 500, '../fonts/robotomedium-webfont.woff2')
+@include font('roboto-vh', normal, 500, '../fonts/robotomedium-webfont.woff2')
 
 // GENERAL CSS SETTINGS
 
