--- a/app/styles/sass/blocks/home-header.scss
+++ b/app/styles/sass/blocks/home-header.scss
@@ -157,3 +157,96 @@ body, html {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.soc-item {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(#fff, $border-opacity);
+  border-bottom: transparent; //правка
+  margin-top: -1px;
+  transition: background .5s ease-out;
+  &:last-child {
+    border: 1px solid rgba(#fff, $border-opacity);
+  }
+  img {
+    width: 15px;
+    height: auto;
+    max-height: 15px;
+    opacity: .3;
+    transition: opacity .5s ease-out;
+  }
+  &:hover {
+    background-color: $accent;
+    img {
+      opacity: 1;
+    }
+  }
+}
+
+//SLIDER
+
+.slider-container {
+  padding-left: $size;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider-bottom {
+  position: absolute;
+  bottom: 0;
+  height: $size;
+  display: flex;
+  align-items: center;
+  left: $size;
+  background-color: #666;
+  z-index: 5;
+  width: calc(75% - #{$size});
+}
+
+.slider-share {
+  flex: 0 1 auto;
+}
+
+.slider-pagination {
+  flex: 0 0 140px;
+}
+
+.slider-scrollbar {
+  flex: 1 0 0;
+}
+
+.slider-navigation {
+  flex: 0 0 140px;
+}
+
+.slider-share__items {
+  display: flex;
+  position: relative;
+  bottom: -.5px;
+}
+
+.slider-share__item {
+  height: $size;
+  width: $size;
+  border: none;
+  background-color: $dark;
+  border-right: 1px solid rgba(#fff, $border-opacity);
+  margin-left: -.5px;
+  &:last-child {
+    border: none;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 3px;
+      height: 100%;
+      border-color: $accent;
+    }
+  }
+}
