--- a/app/styles/sass/blocks/home-header.scss
+++ b/app/styles/sass/blocks/home-header.scss
@@ -203,7 +203,7 @@ body, html {
   display: flex;
   align-items: center;
   left: $size;
-  background-color: #666;
+  // background-color: #666;
   z-index: 5;
   width: calc(75% - #{$size});
 }
@@ -236,7 +236,7 @@ body, html {
   border: none;
   background-color: $dark;
   border-right: 1px solid rgba(#fff, $border-opacity);
-  margin-left: -.5px;
+  // margin-left: -.5px; //правка
   &:last-child {
     border: none;
     &::after {
@@ -246,7 +246,33 @@ body, html {
       right: 0;
       width: 3px;
       height: 100%;
-      border-color: $accent;
+      background-color: $accent;
     }
   }
+}
+
+.slider-img {
+  height: 100%;
+  width: 75%;
+  overflow: hidden;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: .45);
+    z-index: 2;
+  }
+}
+
+.slider-img__slide {
+  height: 100%;
+  overflow: hidden;
+}
+
+.slider-img__bg {
+  height: 100%;
+  background-position: center;
+  background-size: cover;
 }
