--- a/app/styles/sass/blocks/home-header.scss
+++ b/app/styles/sass/blocks/home-header.scss
@@ -276,3 +276,48 @@ body, html {
   background-position: center;
   background-size: cover;
 }
+
+.slider-text {
+  position: absolute;
+  z-index: 3;
+  width: 100%;
+  height: calc(100% - #{$size});
+}
+
+.slider-text__slide {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.slider-text__content {
+  text-align: right;
+  padding-right: 22%;
+}
+
+.slider-text__headig {
+  text-transform: uppercase;
+  tab-size: 60px;
+  line-height: 120%;
+  font-family: oswald-vh, sans-serif;
+  max-width: 780px;
+  float: right;
+  span {
+    color: $accent ;
+    white-space: nowrap;
+  }
+}
+
+.slider-text__desc {
+  float: right;
+  max-width: 500px;
+  font-size: 13px;
+  font-weight: 500;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.slider-text__button {
+  float: right;
+  clear: both;
+}
