--- a/app/styles/sass/blocks/button.scss
+++ b/app/styles/sass/blocks/button.scss
@@ -12,12 +12,12 @@
   &::before {
     content: '';
     position: absolute;
-    width: 0%;
+    width: 0;
     height: 100%;
     background-color: $dark;
     top: 0;
     left: 0;
-    transition: width .5 ease-out;
+    transition: width .5s ease-out;
   }
   &:hover, &:focus {
     &::before {
