--- a/app/styles/sass/blocks/home-header.scss
+++ b/app/styles/sass/blocks/home-header.scss
@@ -322,6 +322,7 @@ body, html {
   height: $size;
   align-items: center;
   position: relative;
+  bottom: 0; //Правки
   .swiper-pagination-bullet {
     width: 6px;
     height: 6px;
